Enigma/testing/error/toomanyrotors.inp
* B BETA I II III IV ABCD (BC)(AD)
asoidfj
asdfioajosiadf
asdfaa